<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeedDialEditor">

    <TextView
        android:id="@+id/editSpeedDialNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_speed_dial_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSpeedDialName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edit_speed_dial_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSpeedDialNameLabel"
        android:autofillHints="" />

    <TextView
        android:id="@+id/editSpeedDialNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_speed_dial_num_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSpeedDialName" />

    <EditText
        android:id="@+id/editSpeedDialNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edit_speed_dial_num"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSpeedDialNumLabel"
        android:autofillHints="" />

    <Button
        android:id="@+id/resetSpeedDialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/reset_speed_dial_button"
        android:onClick="onResetClick"
        app:layout_constraintEnd_toStartOf="@+id/saveSpeedDialButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSpeedDialNum" />

    <Button
        android:id="@+id/saveSpeedDialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/save_speed_dial_button"
        android:onClick="onSaveClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/resetSpeedDialButton"
        app:layout_constraintEnd_toStartOf="@+id/cancelSpeedDialButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resetSpeedDialButton" />

    <Button
        android:id="@+id/cancelSpeedDialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cancel_speed_dial_button"
        android:onClick="onCancelClick"
        app:layout_constraintBaseline_toBaselineOf="@+id/saveSpeedDialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saveSpeedDialButton" />
</androidx.constraintlayout.widget.ConstraintLayout>